option('tests', type: 'feature', value: 'enabled', description: 'Build unit tests.',)
option('legacy-mode', type: 'feature', value: 'enabled', description: 'Enable Legacy mode (HTTPs/CIFS support',)
option('verbose-nbdkit-logs', type: 'feature', value: 'disabled', description: 'Enable very verbose logs for nbdkit.')
