option(
    'nbd-proxy',
    type: 'feature',
    value: 'enabled',
    description: 'Build nbd-proxy application',
)

option(
    'virtual-media',
    type: 'feature',
    value: 'enabled',
    description: 'Build virtual media service',
)

option(
    'tests',
    type: 'feature',
    value: 'enabled',
    description: 'Build unit tests',
)
